--- a/address-book-web/address-book-web/address-book-web.csproj
+++ b/address-book-web/address-book-web/address-book-web.csproj
@@ -61,7 +61,8 @@
   <ItemGroup>
     <Compile Include="Circle.cs" />
     <Compile Include="Figure.cs" />
-    <Compile Include="GroupCreationClass.cs" />
+    <Compile Include="AccountData.cs" />
+    <Compile Include="GroupData.cs" />
     <Compile Include="Square.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
