--- a/address-book-web/address-book-web/address-book-web.csproj
+++ b/address-book-web/address-book-web/address-book-web.csproj
@@ -60,6 +60,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Circle.cs" />
+    <Compile Include="ContactData.cs" />
     <Compile Include="Figure.cs" />
     <Compile Include="AccountData.cs" />
     <Compile Include="GroupData.cs" />
