--- a/address-book-web/address-book-web/address-book-web.csproj
+++ b/address-book-web/address-book-web/address-book-web.csproj
@@ -64,7 +64,10 @@
     <Compile Include="Figure.cs" />
     <Compile Include="AccountData.cs" />
     <Compile Include="GroupData.cs" />
+    <Compile Include="GroupHelper.cs" />
     <Compile Include="GroupRemovalTest.cs" />
+    <Compile Include="LoginHelper.cs" />
+    <Compile Include="NavigationHelper.cs" />
     <Compile Include="Square.cs" />
     <Compile Include="TestBase.cs" />
     <Compile Include="UnitTest1.cs" />
