--- a/address-book-web/address-book-web/address-book-web.csproj
+++ b/address-book-web/address-book-web/address-book-web.csproj
@@ -59,26 +59,22 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Circle.cs" />
-    <Compile Include="ContactData.cs" />
-    <Compile Include="Figure.cs" />
-    <Compile Include="AccountData.cs" />
-    <Compile Include="GroupData.cs" />
-    <Compile Include="GroupHelper.cs" />
-    <Compile Include="GroupRemovalTest.cs" />
-    <Compile Include="LoginHelper.cs" />
-    <Compile Include="NavigationHelper.cs" />
-    <Compile Include="Square.cs" />
-    <Compile Include="TestBase.cs" />
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="AppManager\ApplicationManager.cs" />
+    <Compile Include="Model\ContactData.cs" />
+    <Compile Include="Model\AccountData.cs" />
+    <Compile Include="Model\GroupData.cs" />
+    <Compile Include="AppManager\GroupHelper.cs" />
+    <Compile Include="Tests\GroupRemovalTest.cs" />
+    <Compile Include="AppManager\HelperBase.cs" />
+    <Compile Include="AppManager\LoginHelper.cs" />
+    <Compile Include="AppManager\NavigationHelper.cs" />
+    <Compile Include="Tests\TestBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="GroupCreationTests.cs" />
-    <Compile Include="NewContactCreationTest.cs" />
+    <Compile Include="Tests\GroupCreationTests.cs" />
+    <Compile Include="Tests\NewContactCreationTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram1.cd" />
-    <None Include="ClassDiagram2.cd" />
-    <None Include="ClassDiagram3.cd" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
