--- a/address-book-web/address-book-web/address-book-web.csproj
+++ b/address-book-web/address-book-web/address-book-web.csproj
@@ -60,11 +60,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppManager\ApplicationManager.cs" />
+    <Compile Include="AppManager\ContactHelper.cs" />
     <Compile Include="Model\ContactData.cs" />
     <Compile Include="Model\AccountData.cs" />
     <Compile Include="Model\GroupData.cs" />
     <Compile Include="AppManager\GroupHelper.cs" />
-    <Compile Include="Tests\GroupRemovalTest.cs" />
+    <Compile Include="Tests\GroupModificationTests.cs" />
+    <Compile Include="Tests\GroupRemovalTests.cs" />
     <Compile Include="AppManager\HelperBase.cs" />
     <Compile Include="AppManager\LoginHelper.cs" />
     <Compile Include="AppManager\NavigationHelper.cs" />
